--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <video width="1024" height="768" style="display: none;"></video>
     <canvas width="1024" height="768"></canvas>
     <svg width="1024" height="768"></svg>
-  <script src="app.a33d37355429a7f85cf4.js"></script></body>
+  <script src="https://jballe.github.io/elektron-mikroskop/app.56cdcbe06ef6bede2669.js"></script></body>
 </html>
